nixos/k3s-apps/traefik-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  ports:
  - name: traefik
    port: 9000
    protocol: TCP
    targetPort: traefik
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: "acme-issuer"
spec:
  ingressClassName: traefik
  rules:
  - host: traefik.k8s.kirillorlov.pro
    http:
      paths:
      - backend:
          service:
            name: traefik-dashboard
            port:
              number: 9000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - traefik.k8s.kirillorlov.pro
    secretName: traefik-server-tls
